...
  const handleMomentum = (): void => {
    // Reset scroll momentum flag
    reachedEndDuringMomentum.current = false;
  };

  return (
    <Container testID="movie-list">
      <FlatList
        data={movies}
        renderItem={renderItem as ListRenderItem<unknown>}
        keyExtractor={item => (item as Movie)._id.$oid}
        onEndReachedThreshold={0.3}
        onEndReached={handleEndReached}
...
